--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -25,6 +25,14 @@ jobs:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
 
+      - name: clang-format lint
+        uses: DoozyX/clang-format-lint-action@v0.5
+        with:
+          # Source folder to check formatting
+          source: ./src
+          # Version of clang-format
+          clangFormatVersion: 9 # optional, default is 9
+
       # Runs a single command using the runners shell
       - name: Run a one-line script
         run: echo Hello, world!
